# algoforge

./: .gitignore  README.md  nokia_data.json
cpp/: CMakeLists.txt
cpp/include/: anomaly_detector.hpp  backtester.hpp  candle.hpp  candle_generator.hpp  candle_publisher.hpp  event.hpp  fft.hpp  fir_filter.hpp  market_state.hpp  performance.hpp  portfolio.hpp  regime_fsm.hpp  ring_buffer.hpp  spectral_features.hpp  statistical_features.hpp  stats_engine.hpp
cpp/proto/: candle.proto
cpp/src/: backtest.cpp  backtest_nokia.cpp  main.cpp  nokia_stats.cpp
python/: fetch_nokia.py  nokia_astrology.py
python/core/: settings.py  urls.py
python/market/: consumer.py  models.py  serializers.py  urls.py  views.py
python/market/migrations/: 0001_initial.py
